header is complete

--- a/index.html
+++ b/index.html
@@ -18,7 +18,65 @@
 
   <!-- header -->
   <header>
+    <section class="topbar">
+      <div class="containerish">
+        <div class="col-left">
+          <a href="#" class="topbar-link">VISIT OUR MAIN SITE</a>
+        </div>
+        <div class="col-right">
+          <a href="#" class="topbar-link mr-2">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="#" class="topbar-link mr-3">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="tel:781-272-7022" class="topbar-link">(781) 272-7022</a>
+        </div>
+      </div>
+    </section>
 
+    <!-- navbar -->
+    <div class="nav-wrapper">
+      <div class="containerish">
+
+        <nav class="navbar navbar-expand-lg navbar-light px-lg-0">
+          <a class="navbar-brand" href="#">
+            <img src="images/logo@2x.png" class="nav-logo" alt="">
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
+            aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="main-nav">
+            <div class="navbar-nav ml-auto">
+              <span class="nav-item">
+                <a href="#" class="nav-link" role="button">WHAT IS EMSCULPT?</a>
+              </span>
+              <span class="nav-item">
+                <a href="#" class="nav-link" role="button">HOW IT WORKS</a>
+              </span>
+              <span class="nav-item">
+                <a href="#" class="nav-link" role="button">WHAT TO EXPECT</a>
+              </span>
+              <span class="nav-item">
+                <a href="#" class="nav-link" role="button">AM I A CANDIDATE?</a>
+              </span>
+              <span class="nav-item">
+                <a href="#" class="nav-link" role="button">BEFORE & AFTER</a>
+              </span>
+              <span class="nav-item">
+                <a href="#" class="nav-link" role="button">FAQ</a>
+              </span>
+              <span class="nav-item">
+                <a href="#" class="nav-link focus" role="button">SCHEDULE</a>
+              </span>
+            </div>
+          </div>
+        </nav>
+      </div>
+    </div>
+    <!-- /navbar -->
   </header>
   <!-- /header -->
 
