hero is complete

--- a/index.html
+++ b/index.html
@@ -82,7 +82,23 @@
 
   <!-- main -->
   <main>
-
+    <section class="hero">
+      <div class="containerish">
+        <div class="section-info">
+          <h1 class="color-white is-bold">BUILD MUSCLE + SCULPT YOUR <br class="d-none d-md-block"> BODY IN BURLINGTON,
+            VT</h1>
+          <p class="lead-copy color-white mt-3 mb-4 wrap-75">
+            Looking amazing is about fat reduction and muscle definition. Non-surgical, non-invasive
+            <strong>EmsCulpt</strong> does both
+            – <strong>it reduces body fat and builds muscle!</strong>
+          </p>
+          <div class="ui-btn-group">
+            <a href="#" class="ui-btn ui-btn-white">REQUEST APPOINTMENT</a>
+            <a href="#" class="ui-btn ui-btn-white-ol">LEARN MORE</a>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <!-- /main -->
 
