emsculpt is complete

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 
   <!-- main -->
   <main>
+    <!-- hero -->
     <section class="hero">
       <div class="containerish">
         <div class="section-info">
@@ -99,6 +100,62 @@
         </div>
       </div>
     </section>
+    <!-- /hero -->
+
+    <!-- what is emsculpt -->
+    <section class="emsculpt">
+      <img src="images/dashed-line@2x.png" alt="" class="dashed-line">
+      <img src="images/butt-hero.png" alt="" class="emsculpt--butt">
+      <div class="whatisemsculpt">
+        <div class="containerish">
+          <div class="section-info">
+            <h2 class="color-dark">WHAT IS EMSCULPT?</h2>
+            <p class="body-copy color-dark mt-3 mb-4">
+              The EMSCULPT is the only procedure to help you build muscle and sculpt the body. For tighter, more defined
+              abs and a rounder, remarkable rear-end, Emsculpt can give you the body you (and others) desire!
+            </p>
+            <a href="#" class="ui-btn ui-btn-main-ol">REQUEST APPOINTMENT</a>
+          </div>
+        </div>
+      </div>
+      <!-- fact list -->
+      <div class="fact-list">
+        <p class="fact">+ FDA CLEARED</p>
+        <p class="fact">+ NON-SURGICAL</p>
+        <p class="fact">+ NO DOWNTIME</p>
+        <p class="fact">+ ELIMINATES FAT CELLS</p>
+        <p class="fact">+ TIGHTENS MUSCLES</p>
+      </div>
+      <!-- fact list -->
+      <div class="whatitdoes">
+        <div class="containerish">
+          <h2 class="color-dark">WHAT IT DOES</h2>
+          <div class="col-one">
+            <img src="images/definition-icon@2x.png" alt="" class="col-img">
+            <p class="emcsulpt--icon-title">DEFINITION FOR MEN</p>
+          </div>
+          <div class="col-two">
+            <img src="images/arms-icon@2x.png" alt="" class="col-img">
+            <p class="emcsulpt--icon-title">SCULPTED ARMS</p>
+          </div>
+          <div class="col-three">
+            <img src="images/sexy-stomach-icon@2x.png" alt="" class="col-img">
+            <p class="emcsulpt--icon-title">SEXY STOMACH</p>
+          </div>
+          <div class="col-four">
+            <img src="images/butt-lift-icon@2x.png" alt="" class="col-img">
+            <p class="emcsulpt--icon-title">BUTT LIFT &AMP; TONED LEGS</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /what is emsculpt -->
+
+    <!-- averages -->
+    <section class="averages">
+      <div class="containerish"></div>
+    </section>
+    <!-- /averages -->
   </main>
   <!-- /main -->
 
