efficacy and how it works are complete

--- a/index.html
+++ b/index.html
@@ -153,9 +153,62 @@
 
     <!-- averages -->
     <section class="averages">
-      <div class="containerish"></div>
+      <div class="containerish">
+        <div class="col-left">
+          <p class="bignumber">16%</p>
+          <p class="lead-copy color-white">
+            AVERAGE INCREASE <br> IN MUSCLE MASS*
+          </p>
+        </div>
+        <div class="col-mid">
+          <p class="col-plus-copy color-white">
+            +
+          </p>
+        </div>
+        <div class="col-right">
+          <p class="bignumber">96%</p>
+          <p class="lead-copy color-white">
+            AVERAGE PATIENT <br> SATISFACTION*
+          </p>
+        </div>
+      </div>
     </section>
     <!-- /averages -->
+
+    <!-- efficacy -->
+    <section class="efficacy">
+      <img src="images/dashed-line@2x.png" alt="" class="dashed-line">
+      <div class="containerish">
+        <p class="small-copy color-dark mb-4">
+          The efficacy and safety have been tested in seven multi-center studies by the most reputable scientific
+          methods
+          (MRI, CT, US, and Histology).
+        </p>
+        <a href="#" class="ui-btn ui-btn-main-ol m-0">REQUEST APPOINTMENT</a>
+      </div>
+    </section>
+    <!-- /efficacy -->
+
+    <!-- how it works -->
+    <section class="howitworks">
+      <div class="containerish-fluid">
+        <div class="col-left">
+          <img src="images/how-it-works-img@2x.jpg" alt="">
+        </div>
+        <div class="col-right">
+          <div class="section-info">
+            <h2 class="color-white">HOW IT WORKS</h2>
+            <p class="body-copy color-white mt-3 mb-4">
+              The non-invasive HIFEM® procedure induces powerful muscle contractions not achievable voluntarily. Due to
+              these contractions, muscle tissue is forced to adapt to extreme conditions. The body responds with a deep
+              remodeling of its inner structure, resulting in muscle building and body sculpting!
+            </p>
+            <a href="#" class="ui-btn ui-btn-white m-0">REQUEST APPOINTMENT</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /how it works -->
   </main>
   <!-- /main -->
 
