what to expect is done

--- a/index.html
+++ b/index.html
@@ -104,7 +104,6 @@
 
     <!-- what is emsculpt -->
     <section class="emsculpt">
-      <img src="images/dashed-line@2x.png" alt="" class="dashed-line">
       <img src="images/butt-hero.png" alt="" class="emsculpt--butt">
       <div class="whatisemsculpt">
         <div class="containerish">
@@ -177,7 +176,6 @@
 
     <!-- efficacy -->
     <section class="efficacy">
-      <img src="images/dashed-line@2x.png" alt="" class="dashed-line">
       <div class="containerish">
         <p class="small-copy color-dark mb-4">
           The efficacy and safety have been tested in seven multi-center studies by the most reputable scientific
@@ -209,6 +207,53 @@
       </div>
     </section>
     <!-- /how it works -->
+
+    <!-- what to expect -->
+    <div class="whattoexpect">
+      <div class="video-section">
+        <div class="col-left">
+          <img src="images/abs-video-placeholder@2x.jpg" alt="">
+          <p class="small-copy color-dark is-semibold mt-3">ON ABDOMEN</p>
+        </div>
+        <div class="col-right">
+          <img src="images/buttocks-video-placeholder@2x.jpg" alt="">
+          <p class="small-copy color-dark is-semibold mt-3">ON BUTTOCKS</p>
+        </div>
+      </div>
+
+      <div class="content-section">
+        <img src="images/corner-plus@2x.png" alt="" class="plus plus-1">
+        <img src="images/corner-plus@2x.png" alt="" class="plus plus-2">
+        <div class="row-1">
+          <div class="col-left">
+            <div class="section-info">
+              <h2 class="color-dark">WHAT TO EXPECT</h2>
+              <p class="body-copy color-dark mt-3 mb-4">
+                As you lie down and relax, the Emsculpt paddles will contract your muscles for 30 minutes. Some say it
+                feels like a deep vibration, while others experience it as a buzzing or twitching in the muscles.
+              </p>
+              <a href="#" class="ui-btn ui-btn-main-ol">REQUEST APPOINTMENT</a>
+            </div>
+          </div>
+          <div class="col-right"></div>
+        </div>
+        <div class="row-2">
+          <div class="col-left">
+            <div class="section-info">
+              <h2 class="color-dark">AM I A CANDIDATE?</h2>
+              <p class="body-copy color-dark mt-3 mb-4">
+                If you want defined abs and buttocks, you’re likely a candidate for Emsculpt! It’s ideal for those who
+                have stubborn pockets of fat that won’t budge despite diet and exercise. Ask your provider for more
+                details.
+              </p>
+              <a href="#" class="ui-btn ui-btn-main-ol">REQUEST APPOINTMENT</a>
+            </div>
+          </div>
+          <div class="col-right"></div>
+        </div>
+      </div>
+    </div>
+    <!-- /what to expect -->
   </main>
   <!-- /main -->
 
