project complete, pending art approval

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>DERM PHYSICIANS OF NEW ENGLAND</title>
 
   <link rel="stylesheet" href="css/vendor/bootstrap.min.css" />
-  <!-- <link rel="stylesheet" href="slick/slick.css">
-  <link rel="stylesheet" href="slick/slick-theme.css"> -->
+  <link rel="stylesheet" href="slick/slick.css">
+  <link rel="stylesheet" href="slick/slick-theme.css">
   <link rel="stylesheet" href="css/theme.min.css" />
   <link rel="stylesheet" href="css/vendor/db-animate.min.css" />
 </head>
@@ -254,20 +254,362 @@
       </div>
     </div>
     <!-- /what to expect -->
+
+    <!-- before and after -->
+    <section class="before-after">
+      <h2 class="color-white">BEFORE &AMP; AFTER</h2>
+      <div class="before-after--selection">
+        <img src="images/ba-butt-lift@2x.jpg" alt="" class="ba-select active" id="ba-select-1">
+        <img src="images/ba-stomach-female@2x.jpg" alt="" class="ba-select" id="ba-select-2">
+        <img src="images/ba-stomach-male@2x.jpg" alt="" class="ba-select" id="ba-select-3">
+        <img src="images/ba-arms@2x.jpg" alt="" class="ba-select" id="ba-select-4">
+      </div>
+      <!-- carousel selection -->
+      <div class="carousel-wrapper active my-4" id="butt-lift">
+        <h3 class="color-white text-center mb-4">BUTT LIFT</h3>
+        <div class="slider ba-butt-lift-slider">
+          <img src="images/stomach-before@2x.jpg" alt="">
+          <img src="images/stomach-after.jpg" alt="">
+          <img src="images/stomach-before@2x.jpg" alt="">
+          <img src="images/stomach-after.jpg" alt="">
+        </div>
+      </div>
+      <div class="carousel-wrapper my-4" id="stomach-female">
+        <h3 class="color-white text-center mb-4">STOMACH</h3>
+        <div class="slider stomach-female">
+          <img src="images/stomach-before@2x.jpg" alt="">
+          <img src="images/stomach-after.jpg" alt="">
+          <img src="images/stomach-before@2x.jpg" alt="">
+          <img src="images/stomach-after.jpg" alt="">
+        </div>
+      </div>
+      <div class="carousel-wrapper my-4" id="stomach-male">
+        <h3 class="color-white text-center mb-4">STOMACH</h3>
+        <div class="slider stomach-male">
+          <img src="images/stomach-before@2x.jpg" alt="">
+          <img src="images/stomach-after.jpg" alt="">
+          <img src="images/stomach-before@2x.jpg" alt="">
+          <img src="images/stomach-after.jpg" alt="">
+        </div>
+      </div>
+      <div class="carousel-wrapper my-4" id="arms">
+        <h3 class="color-white text-center mb-4">ARMS</h3>
+        <div class="slider arms-slider">
+          <img src="images/stomach-before@2x.jpg" alt="">
+          <img src="images/stomach-after.jpg" alt="">
+          <img src="images/stomach-before@2x.jpg" alt="">
+          <img src="images/stomach-after.jpg" alt="">
+        </div>
+      </div>
+      <div class="slider-nav"></div>
+
+      <!-- /carousel selection -->
+    </section>
+    <!-- /before and after -->
+
+    <!-- faqs -->
+    <section class="faqs">
+      <div class="containerish">
+        <h2 class="color-dark mb-5 text-center">FREQUENTLY ASKED QUESTIONS</h2>
+        <div class="accordion" id="accordionExample">
+          <div class="card">
+            <div class="card-header" id="headingOne">
+              <h2 class="mb-0">
+                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
+                  aria-expanded="true" aria-controls="collapseOne">
+                  What is Emsculpt?
+                </button>
+              </h2>
+            </div>
+
+            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+              <div class="card-body">
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf
+                moon
+                officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch
+                3 wolf
+                moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
+                Nihil anim
+                keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan
+                excepteur
+                butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you
+                probably
+                haven't heard of them accusamus labore sustainable VHS.
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header" id="headingTwo">
+              <h2 class="mb-0">
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo"
+                  aria-expanded="false" aria-controls="collapseTwo">
+                  How Does EMSCULPT work?
+                </button>
+              </h2>
+            </div>
+            <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+              <div class="card-body">
+                Emsculpt uses noninvasive HIFEM (High-Intensity Focused Electromagnetic) technology to induce powerful
+                muscles
+                contractions that aren’t possible with exercise alone. One Emsculpt treatment is equivalent to doing
+                20,000 sit-ups in
+                half an hour! As your muscles are exposed to HIFEM, the tissue must adapt to extreme conditioning,
+                resulting in muscle
+                growth and sculpting.
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header" id="headingThree">
+              <h2 class="mb-0">
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree"
+                  aria-expanded="false" aria-controls="collapseThree">
+                  WILL I LOSE FAT WITH EMSCULPT?
+                </button>
+              </h2>
+            </div>
+            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+              <div class="card-body">
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf
+                moon
+                officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch
+                3 wolf
+                moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
+                Nihil anim
+                keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan
+                excepteur
+                butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you
+                probably
+                haven't heard of them accusamus labore sustainable VHS.
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header" id="headingFour">
+              <h2 class="mb-0">
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour"
+                  aria-expanded="false" aria-controls="collapseFour">
+                  WHAT ARE THE RESULTS?
+                </button>
+              </h2>
+            </div>
+            <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
+              <div class="card-body">
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf
+                moon
+                officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch
+                3 wolf
+                moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
+                Nihil anim
+                keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan
+                excepteur
+                butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you
+                probably
+                haven't heard of them accusamus labore sustainable VHS.
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header" id="headingFive">
+              <h2 class="mb-0">
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive"
+                  aria-expanded="false" aria-controls="collapseFive">
+                  IS THERE ANY DOWNTIME AFTER EMSCULPT?
+                </button>
+              </h2>
+            </div>
+            <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
+              <div class="card-body">
+                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf
+                moon
+                officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch
+                3 wolf
+                moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et.
+                Nihil anim
+                keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan
+                excepteur
+                butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you
+                probably
+                haven't heard of them accusamus labore sustainable VHS.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /faqs -->
+
+    <!-- about -->
+    <section class="about">
+      <div class="containerish-fluid">
+        <div class="col-left">
+          <div class="section-info">
+            <h2 class="color-white">ABOUT</h2>
+            <p class="body-copy color-white mt-3 mb-4">
+              Here at DermPhysicians of New England, we pride ourselves with an unparalleled commitment to serving you,
+              our valued
+              client. We take standards very seriously and insist on delivering the highest level of beauty and comfort
+              that will
+              leave you completely satisfied. You can relax in knowing that all of our staff members at DermPhysicians
+              are superiorly
+              trained within their specialty, have a tremendous passion for the industry, and a sincere interest in
+              helping you reach
+              your cosmetic goals.
+            </p>
+            <a href="#" class="ui-btn ui-btn-white">VISIT OUR MAIN SITE</a>
+          </div>
+        </div>
+        <div class="col-right"></div>
+      </div>
+    </section>
+    <!-- /about -->
+
+    <!-- consultation -->
+    <section class="consultation">
+      <div class="containerish">
+        <div class="section-info">
+          <h2 class="color-main">REQUEST A CONSULTATION</h2>
+          <p class="body-copy color-dark mt-3 mb-4">
+            Are you ready for more defined abs and lusciously tight backside? The sooner you set up your consultation,
+            the sooner
+            you’ll get the results you love! (Long-term results in those areas that have resisted all efforts through
+            diet and
+            exercise!) Contact us today to find out if the Emsculpt procedure is right for you.
+          </p>
+        </div>
+        <!-- form -->
+        <form action="#" class="consult-form mt-4">
+          <input type="text" name="name" required="true" placeholder="NAME*">
+          <input type="email" name="email" required="true" placeholder="EMAIL*">
+          <input type="text" name="phone" required="true" placeholder="PHONE*">
+          <input type="text" name="preferred" required="true" placeholder="PREFERRED DAY + TIME (OPTIONAL)">
+          <textarea name="message" placeholder="MESSAGE"></textarea>
+          <button class="ui-btn ui-btn-main-ol" type="submit">REQUEST APPOINTMENT</button>
+        </form>
+        <!-- /form -->
+      </div>
+    </section>
+    <!-- /consultation -->
   </main>
   <!-- /main -->
 
   <!-- footer -->
   <footer>
-
+    <section class="footer-1">
+      <div class="containerish">
+        <div class="col-left">
+          <img src="images/logo-footer@2x.png" alt="" class="footer-logo">
+          <a href="#" class="footer-link text-center mt-4">
+            172 Cambridge Street Suite 204 <br>
+            Burlington, MA 01803
+          </a>
+        </div>
+        <div class="col-middle">
+          <p class="body-copy color-white">
+            <strong>HOURS</strong><br>
+            MONDAY - 8AM - 8PM<br>
+            TUESDAY - 8AM - 5PM<br>
+            WEDNESDAY - 8AM - 5PM<br>
+            THURSDAY - 8AM - 5PM<br>
+            FRIDAY - 8AM - 5PM<br>
+            SATURDAY - 9AM - 3PM
+          </p>
+        </div>
+        <div class="col-right">
+          <p class="body-copy color-white mb-0">
+            <strong>QUICK LINKS</strong><br>
+          </p>
+          <div class="footer-links">
+            <div class="links-left">
+              <a href="#" class="footer-link">WHAT IS EMSCULPT?</a>
+              <a href="#" class="footer-link">HOW IT WORKS</a>
+              <a href="#" class="footer-link">WHAT TO EXPECT</a>
+              <a href="#" class="footer-link">AM I A CANDIDATE</a>
+            </div>
+            <div class="links-left">
+              <a href="#" class="footer-link">BEFORE & AFTER</a>
+              <a href="#" class="footer-link">FAQ</a>
+              <a href="#" class="footer-link">CONTACT</a>
+              <a href="#" class="footer-link">BLOG</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </footer>
+
+  <!-- footer-2 -->
+  <section class="footer-2">
+    <div class="containerish">
+      <div class="col-left">
+        <a href="#" class="topbar-link mr-2">
+          <i class="fab fa-instagram"></i>
+        </a>
+        <a href="#" class="topbar-link mr-3">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+      </div>
+      <div class="col-middle">
+        <p class="small-copy is-semibold color-main text-center mb-0">
+          Lotus Gynecology, Health & Wellness <br class="d-md-none"> <span class="d-none d-md-inline-block">|</span> <a
+            href="#" class="footer-link-2">Website by Urge
+            Interactive</a>
+        </p>
+      </div>
+      <div class="col-right">
+        <a href="tel:781-272-7022" class="footer-link-2">(781) 272-7022</a>
+      </div>
+    </div>
+  </section>
   <!-- /footer -->
 
 
   <script src="js/vendor/jquery.min.js"></script>
   <script src="js/vendor/bootstrap.bundle.min.js"></script>
+  <script src="/slick/slick.min.js"></script>
   <script src="js/app.min.js"></script>
   <script src="js/vendor/db-animate.min.js"></script>
+
+  <script>
+    $(document).ready(function () {
+      $('.ba-butt-lift-slider').slick({
+        autoplay: true,
+        dots: true,
+        slidesToShow: 2,
+        slidesToScroll: 2,
+        arrows: false,
+        infinite: true,
+        appendDots: $('.slider-nav')
+      });
+      $('.stomach-female').slick({
+        autoplay: true,
+        dots: true,
+        slidesToShow: 2,
+        slidesToScroll: 2,
+        arrows: false,
+        infinite: true,
+        appendDots: $('.slider-nav')
+      });
+      $('.stomach-male').slick({
+        autoplay: true,
+        dots: true,
+        slidesToShow: 2,
+        slidesToScroll: 2,
+        arrows: false,
+        infinite: true,
+        appendDots: $('.slider-nav')
+      });
+      $('.arms-slider').slick({
+        autoplay: true,
+        dots: true,
+        slidesToShow: 2,
+        slidesToScroll: 2,
+        arrows: false,
+        infinite: true,
+        appendDots: $('.slider-nav')
+      });
+    });
+  </script>
 </body>
 
 </html>
